--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    zoom: 95%;
+    transform: scale(0.8);
+    transform-origin: top left;
+    width: 125%;
 }
 
 
