Adjust transform origin and width in style.css

--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
     align-items: center;
     justify-content: center;
     transform: scale(0.8);
-    transform-origin: top left;
-    width: 125%;
+    transform-origin: top center;
+    width: 100%;
 }
 
 
